# cv-rag

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  rungrobit.sh  runqdrant.sh
.ai/: README.md
.ai/roles/: architect.md  implementer.md  integrator.md  reviewer.md
.ai/scripts/: validate_workflow.py
.ai/state/: backlog.md
cv_rag/: __init__.py  answer.py  arxiv_sync.py  chunking.py  cli.py  config.py  curate.py  embeddings.py  exceptions.py  grobid_client.py  ingest.py  llm.py  openalex_resolve.py  prompts_answer.py  qdrant_store.py  retrieve.py  routing.py  s2_client.py  seed_awesome.py  sqlite_store.py  tei_extract.py
data/: venues_tier0.txt
docs/: corpus-growth-design.md  corpus-update-policy.md  migration-reset-reindex.md
eval/: answer_v2_cases.yaml  questions.yaml
tests/: test_answer.py  test_answer_prompts_v2.py  test_answer_service.py  test_api_routers.py  test_arxiv_sync.py  test_chunking.py  test_citation.py  test_cli_ingest.py  test_cli_legacy_removed.py  test_cli_migrate.py  test_cli_seed.py  test_cli_stats.py  test_corpus_discovery.py  test_corpus_ingest_flow.py  test_corpus_queue.py  test_corpus_resolution.py  test_curate.py  test_curation_service.py  test_embeddings.py  test_eval.py  test_grobid_tei.py  test_ingest_service.py  test_mlx_runner.py  test_openalex_resolve.py  test_qdrant_store.py  test_retrieval_provenance_boost.py  test_retrieve_guard.py  test_routing.py  test_routing_v2.py  test_seed_awesome.py  test_seed_visionbib.py  test_sqlite_store.py  test_workflow_guard.py
web/: index.html  vite.config.ts
(+116 files in other folders)
