[project]
name = "cv-rag"
version = "0.1.0"
description = "Minimal CV papers RAG MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "mlx-lm",
  "PyYAML>=6.0.0",
  "qdrant-client>=1.9.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.scripts]
cv-rag = "cv_rag.cli:app"

[project.optional-dependencies]
web = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["cv_rag"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
